# Randa

./: .gitignore  Bytecode Representation.md  Cargo.toml  Data Representation.md  LICENSE.md  Notes.md  README.md  Serialized Bytecode Representation.md  build.rs
grammar/: Grammar Transform.ipynb  Grammar.md  LexicalGrammar.ebnf  Miranda.ebnf  Miranda_expanded.ebnf  SyntacticGrammar.ebnf  symbols.txt
src/: algorithms.rs  bytecode_parser.rs  command.rs  constants.rs  driver.rs  lex.rs  lib.rs  main.rs  options.rs  vm.rs
src/big_num/: algorithms.rs  bytecode.rs  constants.rs  integer_ref.rs  internal.rs  mod.rs  text.rs
src/compiler/: Grammar.md  ast.rs  bytecode.rs  errors.rs  lexer.rs  lexer_OLD.rs  lexical_value.rs  mod.rs  parser.y  parser_activation.rs  parser_boundary.rs  parser_nonempty.y  parser_session.rs  parser_support.rs  script.rs  tests.rs  token.rs  token_wrapper.rs  value.rs
src/data/: combinator.rs  heap.rs  identifier.rs  mod.rs  path.rs  tag.rs  token.rs  types.rs  values.rs
src/data/api/: algebraic_constructor.rs  alias_entry.rs  ap_node.rs  cons_list.rs  constructor.rs  data_pair.rs  definition.rs  file_info.rs  file_record.rs  free_formal_binding.rs  identifier_record.rs  mod.rs  open_file.rs  private_name.rs  str_cons.rs  type_expr.rs
src/errors/: bytecode.rs  heap_objects.rs  lexical.rs  mod.rs
src/vm/: aliases.rs  bytecode.rs  codegen.rs  diagnostics.rs  init.rs  load.rs  mod.rs  state_reset.rs  tests.rs  typecheck.rs  ui.rs
tests/: example_expectations.txt  examples.rs  miralib.rs
