[package]
name = "randa"
description = "This crate implements the Miranda programming language."
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2021"

readme     = "README.md"
keywords   = ["programminglanguage", "functional", "Miranda"]
homepage   = "https://github.com/rljacobson/Randa"
repository = "https://github.com/rljacobson/Randa"
license    = "BSD"


publish = false

[features]

debug = []

[dependencies]
logos      = "0.16.1"
atty       = "0.2.14" # Checks if stdin is a terminal or piped input. Determines verbosity level.
console    = "0.15.4" # Formatting & Coloring console text.
argparse   = "0.2.2"  # Command line argument and environment variable parsing of options.
gag        = "1.0.0"  # For redirecting stderr to file.
num-traits = "0.2.15" # Conversion from repr to enum
enum-primitive-derive = "0.2.2"  # Conversion from repr to enum
thiserror  = "2.0.17"

[build-dependencies]
rust-bison-skeleton = "0.41.0"
chrono = "0.4.44" # For date and time.

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
